added interface with mujoco

--- a/src/indy7_msgs/CMakeLists.txt
+++ b/src/indy7_msgs/CMakeLists.txt
@@ -25,6 +25,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/JointTrajectory.msg"
   "msg/JointTrajectoryPoint.msg"
   "msg/JointState.msg"
+  "msg/JointCommand.msg"
+  "msg/JointTorque.msg"
   DEPENDENCIES std_msgs
 )
 
